Bug 326710 - Cover Manager - Juk crashes when I click on any blank area in Artist panel
Summary: Cover Manager - Juk crashes when I click on any blank area in Artist panel
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.11
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords: drkonqi, junior-jobs
Depends on:
Blocks:
 
Reported: 2013-10-26 22:50 UTC by André Marcelo Alvarenga
Modified: 2014-01-03 11:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (8.44 KB, image/png)
2013-10-26 22:51 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2013-10-26 22:50:05 UTC
Application: juk (3.11)
KDE Platform Version: 4.11.60
Qt Version: 4.8.6
Operating System: Linux 3.8.0-19-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed:

Tagger -> Cover Manager -> Show Cover Manager

In Artist panel, click on any blank area.

I'm using Project Neon and Kubuntu 13.10 with 4.11.2.

The crash can be reproduced every time.

-- Backtrace:
Application: JuK (juk), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f35e13ec7c0 (LWP 2500))]

Thread 2 (Thread 0x7f35c6a4c700 (LWP 2503)):
#0  0x00007f35db7c2086 in __pthread_mutex_unlock_full () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f35d71213be in pa_mutex_unlock () from /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-3.0.so
#2  0x00007f35db5a4cd1 in ?? () from /usr/lib/x86_64-linux-gnu/libpulse.so.0
#3  0x00007f35db596205 in pa_mainloop_poll () from /usr/lib/x86_64-linux-gnu/libpulse.so.0
#4  0x00007f35db596869 in pa_mainloop_iterate () from /usr/lib/x86_64-linux-gnu/libpulse.so.0
#5  0x00007f35db596920 in pa_mainloop_run () from /usr/lib/x86_64-linux-gnu/libpulse.so.0
#6  0x00007f35db5a4c8f in ?? () from /usr/lib/x86_64-linux-gnu/libpulse.so.0
#7  0x00007f35d7122143 in ?? () from /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-3.0.so
#8  0x00007f35db7c3f8e in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007f35dc49ca0d in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 1 (Thread 0x7f35e13ec7c0 (LWP 2500)):
[KCrash Handler]
#6  0x000000000044e596 in CoverDialog::slotArtistClicked (this=0x2009550, item=0x0) at /build/buildd/project-neon-juk-2+git20131024+r2412/coverdialog.cpp:130
#7  0x000000000044ea2b in CoverDialog::qt_static_metacall (_o=0x2009550, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff6772e7c0) at /build/buildd/project-neon-juk-2+git20131024+r2412/obj-x86_64-linux-gnu/coverdialog.moc:53
#8  0x00007f35de4a59a6 in QMetaObject::activate (sender=0x20b2020, m=0x7f35e087ea80 <Q3ListView::staticMetaObject>, local_signal_index=3, argv=0x7fff6772e7c0) at kernel/qobject.cpp:3547
#9  0x00007f35e05b06db in Q3ListView::clicked(Q3ListViewItem*) () from /opt/project-neon/lib/libQt3Support.so.4
#10 0x00007f35e0424a6d in Q3ListView::contentsMouseReleaseEventEx(QMouseEvent*) () from /opt/project-neon/lib/libQt3Support.so.4
#11 0x00007f35e0423de3 in Q3ListView::contentsMouseReleaseEvent(QMouseEvent*) () from /opt/project-neon/lib/libQt3Support.so.4
#12 0x00007f35e0bc0cce in K3ListView::contentsMouseReleaseEvent (this=0x20b2020, e=0x7fff6772ea00) at /build/buildd/project-neon-kdelibs-2+git20131022+r92327~b7944b5/kde3support/kdeui/k3listview.cpp:869
#13 0x00007f35e049ab93 in Q3ScrollView::viewportMouseReleaseEvent(QMouseEvent*) () from /opt/project-neon/lib/libQt3Support.so.4
#14 0x00007f35e049a16d in Q3ScrollView::eventFilter(QObject*, QEvent*) () from /opt/project-neon/lib/libQt3Support.so.4
#15 0x00007f35e04222eb in Q3ListView::eventFilter(QObject*, QEvent*) () from /opt/project-neon/lib/libQt3Support.so.4
#16 0x00007f35de486e5b in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x142d550, receiver=0x1fb3710, event=0x7fff6772f390) at kernel/qcoreapplication.cpp:1059
#17 0x00007f35dd1d120d in QApplicationPrivate::notify_helper (this=0x142d550, receiver=0x1fb3710, e=0x7fff6772f390) at kernel/qapplication.cpp:4558
#18 0x00007f35dd1cef7e in QApplication::notify (this=0x7fff67730470, receiver=0x1fb3710, e=0x7fff6772f390) at kernel/qapplication.cpp:4105
#19 0x00007f35df296592 in KApplication::notify (this=0x7fff67730470, receiver=0x1fb3710, event=0x7fff6772f390) at /build/buildd/project-neon-kdelibs-2+git20131022+r92327~b7944b5/kdeui/kernel/kapplication.cpp:311
#20 0x00007f35de486bb8 in QCoreApplication::notifyInternal (this=0x7fff67730470, receiver=0x1fb3710, event=0x7fff6772f390) at kernel/qcoreapplication.cpp:949
#21 0x00007f35e03e10bf in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) () from /opt/project-neon/lib/libQt3Support.so.4
#22 0x00007f35dd1cd4ec in QApplicationPrivate::sendMouseEvent (receiver=0x1fb3710, event=0x7fff6772f390, alienWidget=0x1fb3710, nativeWidget=0x2009550, buttonDown=0x7f35de002a58 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3171
#23 0x00007f35dd2746cb in QETWidget::translateMouseEvent (this=0x2009550, event=0x7fff6772fa10) at kernel/qapplication_x11.cpp:4519
#24 0x00007f35dd270d57 in QApplication::x11ProcessEvent (this=0x7fff67730470, event=0x7fff6772fa10) at kernel/qapplication_x11.cpp:3520
#25 0x00007f35dd2ad9ea in x11EventSourceDispatch (s=0x142d8e0, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#26 0x00007f35d8968f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f35d8969248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f35d8969304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f35de4c39e9 in QEventDispatcherGlib::processEvents (this=0x13e6ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#30 0x00007f35dd2addb2 in QGuiEventDispatcherGlib::processEvents (this=0x13e6ad0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#31 0x00007f35de483f10 in QEventLoop::processEvents (this=0x7fff6772fd60, flags=...) at kernel/qeventloop.cpp:149
#32 0x00007f35de4840a4 in QEventLoop::exec (this=0x7fff6772fd60, flags=...) at kernel/qeventloop.cpp:204
#33 0x00007f35de48724e in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221
#34 0x00007f35dd1ce190 in QApplication::exec () at kernel/qapplication.cpp:3823
#35 0x000000000048c874 in main (argc=1, argv=0x7fff67730588) at /build/buildd/project-neon-juk-2+git20131024+r2412/main.cpp:110

Reported using DrKonqi
Comment 1 André Marcelo Alvarenga 2013-10-26 22:51:29 UTC
Created attachment 83141 [details]
Screenshot
Comment 2 Arjun AK 2013-12-23 21:10:41 UTC
see https://git.reviewboard.kde.org/r/114635/
Comment 3 Shubham Chaudhary 2014-01-03 11:04:48 UTC
Git commit ff55aeaf05f232b21eeb6c7b6b13da9be021eb1f by Shubham Chaudhary, on behalf of Arjun Ak.
Committed on 03/01/2014 at 10:20.
Pushed by chaudhary into branch 'master'.

Fix: segfault by clicking empty area in Cover Manager

This patch fixes the segmentation fault crash caused by clicking on an
empty area in the cover manager.

Thanks to Arjun Ak for the bugfix (you've been marked as the author),
and André Marcelo Alvarenga for reporting the bug

REVIEW: 114635

M  +3    -1    coverdialog.cpp

http://commits.kde.org/juk/ff55aeaf05f232b21eeb6c7b6b13da9be021eb1f