Fix: segfault by clicking empty area in Cover Manager

This patch fixes the segmentation fault crash caused by clicking on an
empty area in the cover manager.

Thanks to Arjun Ak for the bugfix (you've been marked as the author),
and André Marcelo Alvarenga for reporting the bug

REVIEW: 114635
BUG: 326710